# ChangeLog for games-rpg/nwn
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.21 2005/09/13 15:33:45 wolf31o2 Exp $

*nwn-1.66 (13 Sep 2005)

  13 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> +nwn-1.66.ebuild:
  Version bump to 1.66 and added a couple more mirrors for
  nwresources129.tar.gz. Closing bug #96640.

*nwn-1.65-r1 (02 Jan 2005)

  02 Jan 2005; Mike Frysinger <vapier@gentoo.org> +nwn-1.65-r1.ebuild,
  -nwn-1.65.ebuild:
  Fix array usage with $A so it actually works #76428 by Francois Guimond.

  30 Dec 2004; Mike Frysinger <vapier@gentoo.org> nwn-1.65.ebuild:
  Add localization support #61260 by dju.

*nwn-1.65 (30 Dec 2004)

  30 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  -files/nwn-1.30-fixinstall, -files/nwn-1.32-fixinstall,
  -files/nwn-1.61-fixinstall, -files/nwn-1.62-fixinstall,
  +files/nwn-1.65-fixinstall, -nwn-1.62.ebuild, +nwn-1.65.ebuild:
  Version bump #74871 by Francois Guimond et al.

  28 Aug 2004; Michael Sterrett <mr_bones_@gentoo.org> nwn-1.62.ebuild:
  fix DESCRIPTION (bug #62066)

  05 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> nwn-1.62.ebuild:
  Changed license to NWN-EULA and closing bug #52507.

  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> nwn-1.62.ebuild:
  Fix use invocation

  24 May 2004; Chris Gianelloni <wolf31o2@gentoo.org> nwn-1.62.ebuild:
  Fixed typo and closing bug #50809.

  18 May 2004; Chris Gianelloni <wolf31o2@gentoo.org> nwn-1.62.ebuild:
  Added RDEPEND for app-emulation/emul-linux-x86-baselibs on amd64.

  17 May 2004; Chris Gianelloni <wolf31o2@gentoo.org> +files/nwn.png,
  nwn-1.62.ebuild:
  Added .desktop entry and closing bug #50809.

  17 May 2004; Danny van Dyk <kugelfang@gentoo.org> nwn-1.62.ebuild:
  Marked ~amd64.

  11 May 2004; Michael Sterrett <mr_bones_@gentoo.org> nwn-1.30.ebuild,
  nwn-1.32.ebuild, nwn-1.61-r1.ebuild:
  clean older ebuilds
