@@ -1,12 +1,13 @@
 MD5 73c6515fd6aa5f860802098a55000ae8 nwclient129.tar.gz 5504342
 MD5 682de9174ed425d842fcfa0e1d33c175 French_linuxclient166_orig.tar.gz 95815139
 MD5 98d3d4afa02be4a76cc664372aa3576d NWNFrench1.66dialog.zip 6758854
-MD5 fd196316842c0ba0e622174a16f16d3b German_linuxclient166_orig.tar.gz 96518347
-MD5 2f12c9aac4588a72e2528a0ab536dc77 NWNGerman1.66dialog.zip 7217241
+MD5 d1e72a42a20c247332de6c6adcbcade5 nwfrench129.tar.gz 357777520
 MD5 a8ea537b8ff909d1e473dfd26440507f Italian_linuxclient166_orig.tar.gz 97447989
 MD5 73c9ddb239ddf21684088b536a670aae NWNItalian1.66dialog.zip 6719283
+MD5 efa3fb10bdaced373d21d9809a176968 nwitalian129.tar.gz 3926804
 MD5 506c6b358266ada6dfeb741c1f0f3e2e Spanish_linuxclient166_orig.tar.gz 97416220
 MD5 0cfe48c49ecbb52263853ebe4f8c2854 NWNSpanish1.66dialog.zip 6693679
+MD5 920d4fdcf5d8d0ff583f236ae7f3f6d4 nwspanish129.tar.gz 3912516
 MD5 bf313bdffef3440011888a1b8386ef88 English_linuxclient166_orig.tar.gz 95293070
 MD5 f4dafd3788aae35c8295c691b4e40db4 NWNEnglish1.66dialog.zip 3180592
 MD5 8222401efe25235b56d01b38ae880b5b nwresources129.tar.gz 1212356127
