@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/nwn
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.21 2005/09/13 15:33:45 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.22 2005/09/15 21:49:29 wolf31o2 Exp $
+
+  15 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> nwn-1.66.ebuild:
+  Fixing digest and disabling German support for the time being.
 
 *nwn-1.66 (13 Sep 2005)
 
